--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "pusher/pusher-php-server": "^4.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "jason-guru/laravel-make-repository": "^0.0.3",
